--- a/home.html
+++ b/home.html
@@ -21,6 +21,24 @@
       href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Open+Sans:wght@300&family=Oswald:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
     <title>SuperHeroInfo</title>
   </head>
 
