--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     <title>SuperHeroInfo</title>
   </head>
 
-  <body>
+  <body style="background-color: rgba(0, 0, 0, 0.2)">
     <h1 class="my-2">Search Any SuperHero Of Your Choice</h1>
 
     <nav
@@ -96,20 +96,6 @@
               >
             </li>
           </ul>
-          <form class="d-flex">
-            <input
-              autocomplete="off"
-              id="input"
-              class="form-control me-3"
-              type="search"
-              placeholder="Character's Name"
-              aria-label="Search"
-              required
-            />
-            <button id="submit" class="btn btn-outline-dark me-3" type="submit">
-              Search
-            </button>
-          </form>
         </div>
       </div>
     </nav>
@@ -130,7 +116,10 @@
     </div>
     <footer class="bg-light text-center text-lg-start">
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      <div
+        class="text-center p-3"
+        style="background-color: rgba(0, 0, 0, 0.541)"
+      >
         © 2022 Copyright:
         <h6>SuperHeroInfo All Rights Reserved</h6>
       </div>
