--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
     <title>SuperHeroInfo</title>
   </head>
 
-  <body>
+  <body style="background-color: rgba(0, 0, 0, 0.2)">
     <h1 class="my-2">Search Any SuperHero Of Your Choice</h1>
 
     <nav
@@ -116,7 +116,7 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid bio">
+    <div class="container-fluid">
       <div>
         <img
           id="heroimg"
@@ -125,40 +125,33 @@
           alt=""
         />
       </div>
-      <div class="my-3 text-center">
-        <button id="fullname" type="button" class="btn btn-info">
-          Full Name
-        </button>
+      <div class="my-3 text-center mx-5 bg-dark rounded">
         <div>
-          <p id="pfullname"></p>
+          <p style="color: red" id="pfullname"></p>
         </div>
       </div>
-      <div class="my-3 text-center">
-        <button id="birth" type="button" class="btn btn-success">Birth</button>
+      <div class="my-3 text-center mx-5 bg-dark rounded">
         <div>
-          <p id="pbirth"></p>
+          <p style="color: darkorange" id="pbirth"></p>
         </div>
       </div>
-      <div class="my-3 text-center">
-        <button id="appearance" type="button" class="btn btn-danger">
-          Appearance
-        </button>
+      <div class="my-3 text-center mx-5 bg-dark rounded">
         <div>
-          <p id="pappearance"></p>
+          <p style="color: yellow" id="pappearance"></p>
         </div>
       </div>
-      <div class="my-3 text-center">
-        <button id="height" type="button" class="btn btn-warning">
-          Height
-        </button>
+      <div class="my-3 text-center mx-5 bg-dark rounded">
         <div>
-          <p id="pheight"></p>
+          <p style="color: rgb(20, 220, 47)" id="pheight"></p>
         </div>
       </div>
     </div>
     <footer class="bg-light text-center text-lg-start">
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      <div
+        class="text-center p-3"
+        style="background-color: rgba(0, 0, 0, 0.541)"
+      >
         © 2022 Copyright:
         <h6>SuperHeroInfo All Rigths Reserved</h6>
       </div>
